--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/menu_desktop.css" media="screen and (min-width : 800px)">
     <link rel="stylesheet" href="css/contacto.css">
     <link rel="stylesheet" href="css/contacto_desktop.css" media="screen and (min-width: 800px)">
-    <title>Document</title>
+    <title>Contacto</title>
 </head>
 <body>
     <header>
@@ -17,14 +17,14 @@
             </div>
             <h1>Unefa Cafe</h1>
             <ul class="desktop_menu">
-                <a href="index.html"><li>Home</li></a>
+                <a href="home.html"><li>Home</li></a>
                 <a href="productos.html"><li>Productos</li></a>
                 <a href="horarios.html"><li>Horarios</li></a>
             </ul>
         </nav>
         <div id="menu_mobile" class="off">
             <ul>
-                <a href="index.html"><li>Home</li></a>
+                <a href="home.html"><li>Home</li></a>
                 <a href="productos.html"><li>Productos</li></a>
                 <a href="horarios.html"><li>Horarios</li></a>
             </ul>
