--- a/horarios.html
+++ b/horarios.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Horarios</title>
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/menu_desktop.css" media="screen and (min-width : 800px)">
     <link rel="stylesheet" href="css/horarios.css">
@@ -16,14 +16,14 @@
             </div>
             <h1>Unefa Cafe</h1>
             <ul class="desktop_menu">
-                <a href="index.html"><li>Home</li></a>
+                <a href="home.html"><li>Home</li></a>
                 <a href="productos.html"><li>Productos</li></a>
                 <a href="contacto.html"><li>Contacto</li></a>
             </ul>
         </nav>
         <div id="menu_mobile" class="off">
             <ul>
-                <a href="index.html"><li>Home</li></a>
+                <a href="home.html"><li>Home</li></a>
                 <a href="productos.html"><li>Productos</li></a>
                 <a href="contacto.html"><li>Contacto</li></a>
             </ul>
