--- a/productos.html
+++ b/productos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Productos</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/menu_desktop.css" media="screen and (min-width : 800px)">
@@ -18,14 +18,14 @@
             </div>
             <h1>Unefa Cafe</h1>
             <ul class="desktop_menu">
-                <a href="index.html"><li>Home</li></a>
+                <a href="home.html"><li>Home</li></a>
                 <a href="contacto.html"><li>Contacto</li></a>
                 <a href="horarios.html"><li>Horarios</li></a>
             </ul>
         </nav>
         <div id="menu_mobile" class="off">
             <ul>
-                <a href="index.html"><li>Home</li></a>
+                <a href="home.html"><li>Home</li></a>
                 <a href="contacto.html"><li>Contacto</li></a>
                 <a href="horarios.html"><li>Horarios</li></a>
             </ul>
